[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/GUI/CustomScenes/SliderColourPicker.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/sliderGrabber.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Buttons/regularButton.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="SliderColourPicker" type="HBoxContainer"]
margin_right = 572.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 18.0
margin_right = 29.0
margin_bottom = 32.0
text = "text:"

[node name="SliderContainer" type="HBoxContainer" parent="."]
margin_left = 34.0
margin_top = 12.0
margin_right = 409.0
margin_bottom = 37.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 15
alignment = 1

[node name="NumberSlider1" type="HBoxContainer" parent="SliderContainer"]
margin_right = 115.0
margin_bottom = 25.0
rect_min_size = Vector2( 115, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="SliderContainer/NumberSlider1"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "R:"
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="SliderContainer/NumberSlider1"]
margin_left = 16.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 16 )
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 255.0
value = 150.0

[node name="Number" type="Label" parent="SliderContainer/NumberSlider1"]
margin_left = 80.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "0"
align = 1
valign = 1

[node name="NumberSlider2" type="HBoxContainer" parent="SliderContainer"]
margin_left = 130.0
margin_right = 245.0
margin_bottom = 25.0
rect_min_size = Vector2( 115, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="SliderContainer/NumberSlider2"]
margin_top = 5.0
margin_right = 14.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "G:"
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="SliderContainer/NumberSlider2"]
margin_left = 18.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 16 )
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 255.0
value = 150.0

[node name="Number" type="Label" parent="SliderContainer/NumberSlider2"]
margin_left = 82.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "0"
align = 1
valign = 1

[node name="NumberSlider3" type="HBoxContainer" parent="SliderContainer"]
margin_left = 260.0
margin_right = 375.0
margin_bottom = 25.0
rect_min_size = Vector2( 115, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="SliderContainer/NumberSlider3"]
margin_top = 5.0
margin_right = 13.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "B:"
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="SliderContainer/NumberSlider3"]
margin_left = 17.0
margin_top = 4.0
margin_right = 77.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 16 )
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 255.0
value = 150.0

[node name="Number" type="Label" parent="SliderContainer/NumberSlider3"]
margin_left = 81.0
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "0"
align = 1
valign = 1

[node name="ColourDisplay" type="ColorRect" parent="."]
margin_left = 414.0
margin_top = 12.0
margin_right = 439.0
margin_bottom = 37.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResetButton" type="TextureButton" parent="."]
margin_left = 444.0
margin_top = 12.0
margin_right = 494.0
margin_bottom = 37.0
rect_min_size = Vector2( 50, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="ResetButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
size_flags_horizontal = 4
text = "reset"
align = 1
valign = 1

[connection signal="value_changed" from="SliderContainer/NumberSlider1/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="value_changed" from="SliderContainer/NumberSlider2/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="value_changed" from="SliderContainer/NumberSlider3/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
